# my-play-work

./: README.md  grid.html  translate.html  文字背景图效果.html
UXP/autops/: .eslint.js  .eslintrc.js  .prettierrc.js  index.bak.js  index.html  index.js  index.v2.js  manifest.json  package.json  ps.js
UXP/autops-for-vue3/: pnpm-lock.yaml
UXP/autops-for-vue3/plugin/: manifest.json
UXP/autops/package/: com.37games.uxp.autops_PS.ccx
UXP/imaging-test/: index.html  main.js  manifest.json  pixelEffects.js
UXP/test/: manifest.json
UXP/uxp-photoshop-plugin-samples-main/direct-action-js-sample/: index.js
UXP/uxp-photoshop-plugin-samples-main/hello-world-panel-js-sample/: README.md
ajax-aop/: index.html
ajax-aop/Ajax-hook-master/demon/: xhr&jsonp.html
avatar/: index.html
avatar/css/: file.css  view.css
avatar/js/: file.js
common-downloads-app/: README.md  package.json  pnpm-lock.yaml
common-downloads-app/src/: App.vue
common-downloads-app/src-tauri/: Cargo.toml
common-downloads-app/src-tauri/downloader/: Cargo.toml
common-downloads-app/src-tauri/downloader/src/: lib.rs
common-downloads-app/src-tauri/helper/: Cargo.toml
common-downloads-app/src-tauri/helper/src/: helper.rs  lib.rs
drawingborad/: index.html
drawingborad/css/: style.css
drawingborad/js/: hashmap.js  main.js  pixelmatch.js
psd/: .gitignore  package-lock.json  package.json
psd/src/: htmlGenerator.js  index-ag-psd.js  index-psd.js  utils.js
psd/test/: test.js
xlsx2json/: package-lock.json  package.json
xlsx2json/data/: articles.xlsx  global.json  taiwan.json
(+15 files in other folders)
