[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.11.11", features = ["json"] }
tokio = { version = "^1.20.1", features = ["full"] }
futures = { version = "^0.3.23" }
anyhow = { version = "^1.0.62" }
thiserror = { version = "^1.0.32" }
log = { version = "^0.4.17" }
