[package]
name = "helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
async-trait = { version="^0.1.57"}
reqwest = { version = "^0.11.11", features = ["json"] }
anyhow = { version = "^1.0.62" }
thiserror = { version = "^1.0.32" }
tokio = { version = "^1.20.1", features = ["full"] }
futures = { version = "^0.3.23" }
log = { version = "^0.4.17" }
downloader = { path = "../downloader"}